thermion_dart/native/include/ThermionDartApi.h

#define bool _Bool
/* For C++98, define bool, false, true as a GNU extension. */
#define bool bool
typedef int32_t EntityId;
	EMSCRIPTEN_KEEPALIVE const void *create_filament_viewer(const void *const context, const void *const loader, void *const platform, const char *uberArchivePath);
	EMSCRIPTEN_KEEPALIVE void destroy_filament_viewer(const void *const viewer);
	EMSCRIPTEN_KEEPALIVE void *get_scene_manager(const void *const viewer);
	EMSCRIPTEN_KEEPALIVE void create_render_target(const void *const viewer, intptr_t texture, uint32_t width, uint32_t height);
	EMSCRIPTEN_KEEPALIVE void clear_background_image(const void *const viewer);
	EMSCRIPTEN_KEEPALIVE void set_background_image(const void *const viewer, const char *path, bool fillHeight);
	EMSCRIPTEN_KEEPALIVE void set_background_image_position(const void *const viewer, float x, float y, bool clamp);
	EMSCRIPTEN_KEEPALIVE void set_background_color(const void *const viewer, const float r, const float g, const float b, const float a);
	EMSCRIPTEN_KEEPALIVE void set_tone_mapping(const void *const viewer, int toneMapping);
	EMSCRIPTEN_KEEPALIVE void set_bloom(const void *const viewer, float strength);
	EMSCRIPTEN_KEEPALIVE void load_skybox(const void *const viewer, const char *skyboxPath);
	EMSCRIPTEN_KEEPALIVE void load_ibl(const void *const viewer, const char *iblPath, float intensity);
	EMSCRIPTEN_KEEPALIVE void rotate_ibl(const void *const viewer, float *rotationMatrix);
	EMSCRIPTEN_KEEPALIVE void remove_skybox(const void *const viewer);
	EMSCRIPTEN_KEEPALIVE void remove_ibl(const void *const viewer);
	EMSCRIPTEN_KEEPALIVE EntityId add_light(
		const void *const viewer, 
		uint8_t type, 
		float colour, 
		float intensity, 
		float posX, 
		float posY, 
		float posZ, 
		float dirX, 
		float dirY, 
		float dirZ, 
		float falloffRadius,
    	float spotLightConeInner,
    	float spotLightConeOuter,
		float sunAngularRadius,
		float sunHaloSize,
		float sunHaloFallof,
		bool shadows);
	EMSCRIPTEN_KEEPALIVE void remove_light(const void *const viewer, EntityId entityId);
	EMSCRIPTEN_KEEPALIVE void clear_lights(const void *const viewer);
	EMSCRIPTEN_KEEPALIVE EntityId load_glb(void *sceneManager, const char *assetPath, int numInstances);
	EMSCRIPTEN_KEEPALIVE EntityId load_glb_from_buffer(void *sceneManager, const void *const data, size_t length);
	EMSCRIPTEN_KEEPALIVE EntityId load_gltf(void *sceneManager, const char *assetPath, const char *relativePath);
	EMSCRIPTEN_KEEPALIVE EntityId create_instance(void *sceneManager, EntityId id);
	EMSCRIPTEN_KEEPALIVE int get_instance_count(void *sceneManager, EntityId entityId);
	EMSCRIPTEN_KEEPALIVE void get_instances(void *sceneManager, EntityId entityId, EntityId *out);
	EMSCRIPTEN_KEEPALIVE void set_main_camera(const void *const viewer);
	EMSCRIPTEN_KEEPALIVE EntityId get_main_camera(const void *const viewer);
	EMSCRIPTEN_KEEPALIVE bool set_camera(const void *const viewer, EntityId entity, const char *nodeName);
	EMSCRIPTEN_KEEPALIVE void set_view_frustum_culling(const void *const viewer, bool enabled);
	EMSCRIPTEN_KEEPALIVE void render(
		const void *const viewer,
		uint64_t frameTimeInNanos,
		void *pixelBuffer,
		void (*callback)(void *buf, size_t size, void *data),
		void *data);
	EMSCRIPTEN_KEEPALIVE void create_swap_chain(const void *const viewer, const void *const window, uint32_t width, uint32_t height);
	EMSCRIPTEN_KEEPALIVE void destroy_swap_chain(const void *const viewer);
	EMSCRIPTEN_KEEPALIVE void set_frame_interval(const void *const viewer, float interval);
	EMSCRIPTEN_KEEPALIVE void update_viewport_and_camera_projection(const void *const viewer, uint32_t width, uint32_t height, float scaleFactor);
	EMSCRIPTEN_KEEPALIVE void scroll_begin(const void *const viewer);
	EMSCRIPTEN_KEEPALIVE void scroll_update(const void *const viewer, float x, float y, float z);
	EMSCRIPTEN_KEEPALIVE void scroll_end(const void *const viewer);
	EMSCRIPTEN_KEEPALIVE void grab_begin(const void *const viewer, float x, float y, bool pan);
	EMSCRIPTEN_KEEPALIVE void grab_update(const void *const viewer, float x, float y);
	EMSCRIPTEN_KEEPALIVE void set_view_frustum_culling(const void *const viewer, bool enabled);
	EMSCRIPTEN_KEEPALIVE void filament_pick(void *const viewer, int x, int y, void (*callback)(EntityId entityId, int x, int y));
	EMSCRIPTEN_KEEPALIVE void add_collision_component(void *const sceneManager, EntityId entityId, void (*callback)(const EntityId entityId1, const EntityId entityId2), bool affectsCollidingTransform);