thermion_dart/lib/thermion_dart/compatibility/native/thermion_dart.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

@ffi.Native<
        ffi.Pointer<ffi.Void> Function(LoadFilamentResourceFromOwner,
            FreeFilamentResourceFromOwner, ffi.Pointer<ffi.Void>)>(
    symbol: 'make_resource_loader',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external ffi.Pointer<ffi.Void> make_resource_loader(
  LoadFilamentResourceFromOwner loadFn,
  FreeFilamentResourceFromOwner freeFn,
  ffi.Pointer<ffi.Void> owner,
);

@ffi.Native<
        ffi.Pointer<ffi.Void> Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>)>(
    symbol: 'create_filament_viewer',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external ffi.Pointer<ffi.Void> create_filament_viewer(
  ffi.Pointer<ffi.Void> context,
  ffi.Pointer<ffi.Void> loader,
  ffi.Pointer<ffi.Void> platform,
  ffi.Pointer<ffi.Char> uberArchivePath,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'destroy_filament_viewer',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void destroy_filament_viewer(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'get_scene_manager',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external ffi.Pointer<ffi.Void> get_scene_manager(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, ffi.IntPtr, ffi.Uint32, ffi.Uint32)>(
    symbol: 'create_render_target',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void create_render_target(
  ffi.Pointer<ffi.Void> viewer,
  int texture,
  int width,
  int height,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'clear_background_image',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void clear_background_image(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, ffi.Bool)>(
    symbol: 'set_background_image',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_background_image(
  ffi.Pointer<ffi.Void> viewer,
  ffi.Pointer<ffi.Char> path,
  bool fillHeight,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float, ffi.Bool)>(
    symbol: 'set_background_image_position',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_background_image_position(
  ffi.Pointer<ffi.Void> viewer,
  double x,
  double y,
  bool clamp,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float, ffi.Float, ffi.Float)>(
    symbol: 'set_background_color',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_background_color(
  ffi.Pointer<ffi.Void> viewer,
  double r,
  double g,
  double b,
  double a,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>(
    symbol: 'set_tone_mapping',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_tone_mapping(
  ffi.Pointer<ffi.Void> viewer,
  int toneMapping,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>(
    symbol: 'set_bloom', assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_bloom(
  ffi.Pointer<ffi.Void> viewer,
  double strength,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>(
    symbol: 'load_skybox', assetId: 'package:thermion_dart/thermion_dart.dart')
external void load_skybox(
  ffi.Pointer<ffi.Void> viewer,
  ffi.Pointer<ffi.Char> skyboxPath,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, ffi.Float)>(
    symbol: 'load_ibl', assetId: 'package:thermion_dart/thermion_dart.dart')
external void load_ibl(
  ffi.Pointer<ffi.Void> viewer,
  ffi.Pointer<ffi.Char> iblPath,
  double intensity,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Float>)>(
    symbol: 'rotate_ibl', assetId: 'package:thermion_dart/thermion_dart.dart')
external void rotate_ibl(
  ffi.Pointer<ffi.Void> viewer,
  ffi.Pointer<ffi.Float> rotationMatrix,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'remove_skybox',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void remove_skybox(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'remove_ibl', assetId: 'package:thermion_dart/thermion_dart.dart')
external void remove_ibl(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<
        EntityId Function(
            ffi.Pointer<ffi.Void>,
            ffi.Uint8,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Bool)>(
    symbol: 'add_light', assetId: 'package:thermion_dart/thermion_dart.dart')
external int add_light(
  ffi.Pointer<ffi.Void> viewer,
  int type,
  double colour,
  double intensity,
  double posX,
  double posY,
  double posZ,
  double dirX,
  double dirY,
  double dirZ,
  double falloffRadius,
  double spotLightConeInner,
  double spotLightConeOuter,
  double sunAngularRadius,
  double sunHaloSize,
  double sunHaloFallof,
  bool shadows,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId)>(
    symbol: 'remove_light', assetId: 'package:thermion_dart/thermion_dart.dart')
external void remove_light(
  ffi.Pointer<ffi.Void> viewer,
  int entityId,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'clear_lights', assetId: 'package:thermion_dart/thermion_dart.dart')
external void clear_lights(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<
        EntityId Function(
            ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, ffi.Int)>(
    symbol: 'load_glb', assetId: 'package:thermion_dart/thermion_dart.dart')
external int load_glb(
  ffi.Pointer<ffi.Void> sceneManager,
  ffi.Pointer<ffi.Char> assetPath,
  int numInstances,
);

@ffi.Native<
        EntityId Function(
            ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, ffi.Size)>(
    symbol: 'load_glb_from_buffer',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external int load_glb_from_buffer(
  ffi.Pointer<ffi.Void> sceneManager,
  ffi.Pointer<ffi.Void> data,
  int length,
);

@ffi.Native<
        EntityId Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>)>(
    symbol: 'load_gltf', assetId: 'package:thermion_dart/thermion_dart.dart')
external int load_gltf(
  ffi.Pointer<ffi.Void> sceneManager,
  ffi.Pointer<ffi.Char> assetPath,
  ffi.Pointer<ffi.Char> relativePath,
);

@ffi.Native<EntityId Function(ffi.Pointer<ffi.Void>, EntityId)>(
    symbol: 'create_instance',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external int create_instance(
  ffi.Pointer<ffi.Void> sceneManager,
  int id,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>, EntityId)>(
    symbol: 'get_instance_count',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external int get_instance_count(
  ffi.Pointer<ffi.Void> sceneManager,
  int entityId,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, EntityId, ffi.Pointer<EntityId>)>(
    symbol: 'get_instances',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void get_instances(
  ffi.Pointer<ffi.Void> sceneManager,
  int entityId,
  ffi.Pointer<EntityId> out,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'set_main_camera',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_main_camera(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<EntityId Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'get_main_camera',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external int get_main_camera(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<
        ffi.Bool Function(
            ffi.Pointer<ffi.Void>, EntityId, ffi.Pointer<ffi.Char>)>(
    symbol: 'set_camera', assetId: 'package:thermion_dart/thermion_dart.dart')
external bool set_camera(
  ffi.Pointer<ffi.Void> viewer,
  int entity,
  ffi.Pointer<ffi.Char> nodeName,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>(
    symbol: 'set_view_frustum_culling',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_view_frustum_culling(
  ffi.Pointer<ffi.Void> viewer,
  bool enabled,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            ffi.Uint64,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(ffi.Pointer<ffi.Void> buf, ffi.Size size,
                        ffi.Pointer<ffi.Void> data)>>,
            ffi.Pointer<ffi.Void>)>(
    symbol: 'render', assetId: 'package:thermion_dart/thermion_dart.dart')
external void render(
  ffi.Pointer<ffi.Void> viewer,
  int frameTimeInNanos,
  ffi.Pointer<ffi.Void> pixelBuffer,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<ffi.Void> buf, ffi.Size size,
                  ffi.Pointer<ffi.Void> data)>>
      callback,
  ffi.Pointer<ffi.Void> data,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
            ffi.Uint32, ffi.Uint32)>(
    symbol: 'create_swap_chain',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void create_swap_chain(
  ffi.Pointer<ffi.Void> viewer,
  ffi.Pointer<ffi.Void> window,
  int width,
  int height,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'destroy_swap_chain',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void destroy_swap_chain(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>(
    symbol: 'set_frame_interval',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_frame_interval(
  ffi.Pointer<ffi.Void> viewer,
  double interval,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, ffi.Uint32, ffi.Uint32, ffi.Float)>(
    symbol: 'update_viewport_and_camera_projection',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void update_viewport_and_camera_projection(
  ffi.Pointer<ffi.Void> viewer,
  int width,
  int height,
  double scaleFactor,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'scroll_begin', assetId: 'package:thermion_dart/thermion_dart.dart')
external void scroll_begin(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float, ffi.Float)>(
    symbol: 'scroll_update',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void scroll_update(
  ffi.Pointer<ffi.Void> viewer,
  double x,
  double y,
  double z,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'scroll_end', assetId: 'package:thermion_dart/thermion_dart.dart')
external void scroll_end(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float, ffi.Bool)>(
    symbol: 'grab_begin', assetId: 'package:thermion_dart/thermion_dart.dart')
external void grab_begin(
  ffi.Pointer<ffi.Void> viewer,
  double x,
  double y,
  bool pan,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float)>(
    symbol: 'grab_update', assetId: 'package:thermion_dart/thermion_dart.dart')
external void grab_update(
  ffi.Pointer<ffi.Void> viewer,
  double x,
  double y,
);
